--- a/B2B/bower.json
+++ b/B2B/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
+    "bootstrap-vertical-tabs": "~1.2.1",
     "modernizr": "~2.8.3"
   },
   "overrides": {
