--- a/Gmt/package.json
+++ b/Gmt/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "async": "^0.9.0",
-    "cloudinary": "^1.0.12",
+    "box": "0.0.4",
+    "box-appauth": "^1.6.5",
+    "cloudinary": "^1.2.5",
     "dotenv": "^1.1.0",
+    "express": "^4.13.3",
     "express-handlebars": "^1.1.0",
     "fn.js": "^0.8.1",
     "handlebars": "^2.0.0",
@@ -13,6 +16,10 @@
     "moment": "^2.8.1",
     "node-sass": "^2.1.1",
     "node-sass-middleware": "^0.5.0",
+    "nodejs-box": "^0.1.3",
+    "passport": "^0.3.2",
+    "passport-box": "^0.1.0",
+    "request": "^2.65.0",
     "underscore": "^1.8.0"
   },
   "devDependencies": {
