--- a/Gmt/package.json
+++ b/Gmt/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "activator": "^1.2.1",
     "async": "^0.9.0",
     "box": "0.0.4",
     "box-appauth": "^1.6.5",
