--- a/Gmt/package.json
+++ b/Gmt/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^2.1.1",
     "node-sass-middleware": "^0.5.0",
     "nodejs-box": "^0.1.3",
+    "nodemon": "^1.8.1",
     "passport": "^0.3.2",
     "passport-box": "^0.1.0",
     "passport-local": "^1.0.0",
