--- a/Gmt/package.json
+++ b/Gmt/package.json
@@ -27,7 +27,8 @@
     "passport-box": "^0.1.0",
     "passport-local": "^1.0.0",
     "request": "^2.65.0",
-    "underscore": "^1.8.0"
+    "underscore": "^1.8.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "grunt": "^0.4.4",
