--- a/Gmt/package.json
+++ b/Gmt/package.json
@@ -6,7 +6,7 @@
     "activator": "^1.2.1",
     "async": "^0.9.0",
     "body-parser": "^1.14.1",
-    "box-appauth": "^1.6.5",
+    "box-appauth": "1.6.5",
     "cloudinary": "^1.2.5",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.0",
